# nrt-data

./: MANIFEST.in  NOTICE  pyproject.toml
nrt/data/: __init__.py  simulate.py
scripts/: germany_points_sampling.py  romania_cube_10m.py
