[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrt-data"
version = "0.0.1.post0"
description = "nrt namespace package giving access to demo and test datasets, extracted from nrt core"
readme = "README.rst"
authors = [
    {name = "Loic Dutrieux", email = "loic.dutrieux@ec.europa.eu"},
    {name = "Jonas Viehweger"},
    {name = "Kenji Ose"}
]
maintainers = [
  {name = "Loic Dutrieux", email = "loic.dutrieux@ec.europa.eu"}
]
keywords = ["sentinel2", "xarray", "zarr", "netcdf"]
license = {text = "EUPL-1.2"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)"
]
requires-python = ">= 3.9"
dependencies = [
    "numpy",
    "xarray",
    "rasterio",
    "fiona",
    "netCDF4",
    "zarr",
    "aiohttp",
    "fsspec",
    "pooch"
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme"]

[project.urls]
homepage = "https://code.europa.eu/jrc-forest/nrt-data"

[tool.setuptools.packages.find]
where = ["."]
include = ["nrt.data"]

[tool.setuptools.package-data]
"nrt.data" = ["*.json"]

